[project]
name = "container-helpers"
version = "0.0.11"
description = "Helpers for running docker or podman containers easily in Python"
authors = [{ name = "Fang-Pen Lin", email = "fangpen@launchplatform.com" }]
requires-python = "~=3.9"
license = "MIT"

[project.urls]
Repository = "https://github.com/LaunchPlatform/container-helpers"

[dependency-groups]
dev = [
    "pytest>=7.4.0,<8",
    "pytest-asyncio>=0.21.0,<0.22",
]

[tool.hatch.build.targets.sdist]
include = ["containers"]

[tool.hatch.build.targets.wheel]
include = ["containers"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
